--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-@media (min-width: 480px) {
+@media all and (min-width: 480px) {
   body {
 	padding-top: 0em;
 	padding-bottom: 0em;
+	max-width: 100%;
+    overflow-x: hidden;
   }
+}
+
+@media not all and (min-width: 480px) {
+	body {
+		padding-top: 7em;
+		padding-bottom: 7em;
+	}
 }
 
 :root {
@@ -24,8 +33,6 @@
 
 body {
 	text-align:center;
-	padding-top: 7em;
-	padding-bottom: 7em;
 	min-height: 100%;
 	min-height: 100vh;	
 	display: flex;
@@ -33,7 +40,6 @@ body {
 	background: var(--background);
 	color: var(--main-text);
 	font-size: 2.0em;
-/* 	background-image: url("leaves.jpg"); */
 }
 
 td {
@@ -98,7 +104,6 @@ a.header {
 	text-align: left;
 	width: auto;
 	min-width: 450px;
-/* 	opacity: 96%; */
 }
 
 .main {
