--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-@media all and (min-width: 480px) {
-  body {
-	padding-top: 0em;
-	padding-bottom: 0em;
-	max-width: 100%;
-    overflow-x: hidden;
-  }
-}
-
-@media not all and (min-width: 480px) {
-	body {
-		padding-top: 7em;
-		padding-bottom: 7em;
-	}
-}
-
 :root {
 	--background: #0C1C54;
 	--foreground: #F3F6FF;
@@ -40,6 +24,17 @@ body {
 	background: var(--background);
 	color: var(--main-text);
 	font-size: 2.0em;
+	padding-top: 7em;
+	padding-bottom: 7em;
+}
+
+@media (max-width: 480px) {
+  body {
+	padding-top: 0em;
+	padding-bottom: 0em;
+	max-width: 100%;
+    overflow-x: hidden;
+  }
 }
 
 td {
