--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@
 
 body {
 	text-align: center;
+	min-height: 100%;
 	font-family: 'Raleway', sans-serif;
 	background: var(--background);
 	color: var(--main-text);
