--- a/src/styles.css
+++ b/src/styles.css
@@ -21,20 +21,20 @@ body {
 	font-family: 'Raleway', sans-serif;
 	background: var(--background);
 	color: var(--main-text);
-	font-size: 2.0em;
+	font-size: 20px;
 	padding-top: 7em;
 	padding-bottom: 7em;
 }
 
 @media (max-width: 480px) {
 	body {
-		padding-top: 0em;
-		padding-bottom: 0em;
+		padding-top: 0;
+		padding-bottom: 0;
 	}
 }
 
 td {
-	padding-bottom: 0.5em;
+	padding-bottom: 0.25em;
 	padding-right: 0.5em;
 }
 
@@ -94,7 +94,7 @@ a.header {
 	display: inline-block;
 	text-align: left;
 	width: auto;
-	min-width: 450px;
+	min-width: 460px;
 }
 
 .main {
