--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,13 @@ body {
 	padding-bottom: 2em;
 }
 
+@media (max-width: 600px) {
+	body {
+		padding-top: 0em;
+		padding-bottom: 1em;
+	}
+}
+
 td {
 	padding-bottom: 0.25em;
 	padding-right: 0.5em;
