--- a/src/styles.css
+++ b/src/styles.css
@@ -84,6 +84,15 @@ a.header {
 	color: var(--link);
 }
 
+.glslCanvas {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top:0;
+	left:0;
+	z-index: -1;
+}
+
 .all {
 	color: var(--all);
 }
