--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,7 @@ body {
 	font-size: 20px;
 	padding-top: 2em;
 	padding-bottom: 2em;
+	overscroll-behavior: none;
 }
 
 @media (max-width: 600px) {
